# crowdin-api-client-python

./: .gitignore  .pre-commit-config.yaml  .release-it.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __init__.py  client.html  client.py  conftest.py  currentIssue.md  enums.py  exceptions.html  exceptions.py  index.html  parser.py  pyproject.toml  requester.html  requester.py  requirements-dev.txt  setup.cfg  setup.py  sorting.html  typing.html  typing.py  utils.html
.github/workflows/: dependency-analysis.yml  docs.yml  pypi.yml  python-package.yml
api_resources/: __init__.py  enums.html  enums.py  index.html
api_resources/abstract/: resources.html  resources.py
api_resources/ai/: enums.html  index.html  resource.html  types.html
api_resources/application/: enums.html  index.html  resource.html  types.html
api_resources/branches/: enums.html  index.html  resource.html  types.html
api_resources/bundles/: enums.py  resource.html  types.html
api_resources/clients/: index.html  resource.html
api_resources/dictionaries/: resource.html
api_resources/distributions/: enums.html  enums.py  index.html  resource.html
api_resources/fields/: enums.html  (+3 more)
crowdin_api/: __init__.py  client.html  client.py  decorator.py  enums.html  enums.py  exceptions.html  exceptions.py  fixtures.py  index.html  parser.html  parser.py  requester.html  requester.py  sorting.py  status.py  typing.py  utils.py
requirements/: requirements-dev.txt  requirements-doc.txt  requirements.txt
tests/: test_client.py  test_exceptions.py  test_parser.py  test_requester.py
(+380 files in other folders)
